fix fe ut
Signed-off-by: trueeyu <lxhhust350@qq.com>